fix: Post tags overflowing box

--- a/src/pages/Post.module.css
+++ b/src/pages/Post.module.css
@@ -269,6 +269,7 @@
 
 .tags_wrapper_aside {
   display: flex;
+  flex-flow: wrap;
   gap: 1rem;
 }
 
